--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,9 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>YOU!GOOD!</title>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/img/favicon.ico') }}" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/img/Favicon.ico') }}" />
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
@@ -46,13 +46,38 @@
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
                 class="fas fa-bars"></i></button>
         <!-- Navbar Search-->
-        <form method ="POST" action="/yougood/index-code.html" class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+        <!-- <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
             <div class="input-group">
-                <input type="text" name ="code" class="form-control" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
-                <button class="btn btn-primary" id="btnNavbarSearch" type="submit"><i class="fas fa-search"></i></button>
+                <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..."
+                    aria-describedby="btnNavbarSearch" />
+                <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i
+                        class="fas fa-search"></i></button>
+            </div>
+        </form> -->
+        <form method="POST" action="/yougood/index-code.html"
+            class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+            <div class="input-group">
+                <input type="text" name="code" class="form-control" placeholder="Search for..."
+                    aria-label="Search for..." aria-describedby="btnNavbarSearch" />
+                <button class="btn btn-primary" id="btnNavbarSearch" type="submit"><i
+                        class="fas fa-search"></i></button>
             </div>
         </form>
-
+        <!-- Navbar-->
+        <!-- <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#!">Settings</a></li>
+                    <li><a class="dropdown-item" href="#!">Activity Log</a></li>
+                    <li>
+                        <hr class="dropdown-divider" />
+                    </li>
+                    <li><a class="dropdown-item" href="#!">Logout</a></li>
+                </ul>
+            </li>
+        </ul> -->
     </nav>
     <div id="layoutSidenav">
         <div id="layoutSidenav_nav">
@@ -102,8 +127,9 @@
                             <div class="card bg-primary text-white mb-4">
                                 <div class="card-body">Spark on YARN</div>
                                 <div class="card-footer d-flex align-items-center justify-content-between">
-                                    <!-- <a class="small text-white stretched-link" href="#">View Details</a> -->
-                                    <a class="small text-white stretched-link" href="https://hackmd.io/@XYojb--aQQq12eTpXK-TPQ/S1cKbSh8t#/" target="_blank">View Details</a>
+                                    <a class="small text-white stretched-link"
+                                        href="https://hackmd.io/@XYojb--aQQq12eTpXK-TPQ/S1cKbSh8t#/0/3"
+                                        target="_blank">View Details</a>
                                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                 </div>
                             </div>
@@ -112,30 +138,36 @@
                             <div class="card bg-warning text-white mb-4">
                                 <div class="card-body">Data Processing</div>
                                 <div class="card-footer d-flex align-items-center justify-content-between">
-                                    <a class="small text-white stretched-link" href="#">View Details</a>
+                                    <a class="small text-white stretched-link"
+                                        href="https://hackmd.io/@XYojb--aQQq12eTpXK-TPQ/S1cKbSh8t#/0/8"
+                                        target="_blank">View Details</a>
                                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xl-3 col-md-6">
                             <div class="card bg-success text-white mb-4">
-                                <div class="card-body">NLP</div>
+                                <div class="card-body">Model Training</div>
                                 <div class="card-footer d-flex align-items-center justify-content-between">
-                                    <a class="small text-white stretched-link" href="#">View Details</a>
+                                    <a class="small text-white stretched-link"
+                                        href="https://hackmd.io/@XYojb--aQQq12eTpXK-TPQ/S1cKbSh8t#/0/9"
+                                        target="_blank">View Details</a>
                                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xl-3 col-md-6">
                             <div class="card bg-danger text-white mb-4">
-                                <div class="card-body">Model Training</div>
+                                <div class="card-body">NLP</div>
                                 <div class="card-footer d-flex align-items-center justify-content-between">
-                                    <a class="small text-white stretched-link" href="#">View Details</a>
+                                    <a class="small text-white stretched-link"
+                                        href="https://hackmd.io/@XYojb--aQQq12eTpXK-TPQ/S1cKbSh8t#/0/10"
+                                        target="_blank">View Details</a>
                                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                 </div>
                             </div>
                         </div>
-                    </div> 
+                    </div>
                     <div class="row">
                         <div class="col-xl-6">
                             <div class="card mb-4">
@@ -143,7 +175,7 @@
                                     <i class="fas fa-chart-area me-1"></i>
                                     Predict
                                 </div>
-                                <div class="card-body"><canvas id="myAreaChart" width="100%" height="50"></canvas></div>
+                                <div class="card-body"><canvas id="myAreaChart" width="100%" height="80"></canvas></div>
                             </div>
                         </div>
                         <div class="col-xl-6">
@@ -152,7 +184,7 @@
                                     <i class="fas fa-chart-bar me-1"></i>
                                     News Size
                                 </div>
-                                <div class="card-body"><canvas id="myBarChart" width="100%" height="50"></canvas></div>
+                                <div class="card-body"><canvas id="myBarChart" width="100%" height="80"></canvas></div>
                             </div>
                         </div>
                     </div>
