--- a/templates/index.html
+++ b/templates/index.html
@@ -128,7 +128,7 @@
                                 <div class="card-body">Spark on YARN</div>
                                 <div class="card-footer d-flex align-items-center justify-content-between">
                                     <a class="small text-white stretched-link"
-                                        href="https://hackmd.io/@XYojb--aQQq12eTpXK-TPQ/S1cKbSh8t#/0/3"
+                                        href="https://hackmd.io/@XYojb--aQQq12eTpXK-TPQ/S1cKbSh8t#/1"
                                         target="_blank">View Details</a>
                                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                 </div>
@@ -139,7 +139,7 @@
                                 <div class="card-body">Data Processing</div>
                                 <div class="card-footer d-flex align-items-center justify-content-between">
                                     <a class="small text-white stretched-link"
-                                        href="https://hackmd.io/@XYojb--aQQq12eTpXK-TPQ/S1cKbSh8t#/0/8"
+                                        href="https://hackmd.io/@XYojb--aQQq12eTpXK-TPQ/S1cKbSh8t#/2"
                                         target="_blank">View Details</a>
                                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                 </div>
@@ -150,7 +150,7 @@
                                 <div class="card-body">Model Training</div>
                                 <div class="card-footer d-flex align-items-center justify-content-between">
                                     <a class="small text-white stretched-link"
-                                        href="https://hackmd.io/@XYojb--aQQq12eTpXK-TPQ/S1cKbSh8t#/0/9"
+                                        href="https://hackmd.io/@XYojb--aQQq12eTpXK-TPQ/S1cKbSh8t#/3"
                                         target="_blank">View Details</a>
                                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                 </div>
@@ -161,7 +161,7 @@
                                 <div class="card-body">NLP</div>
                                 <div class="card-footer d-flex align-items-center justify-content-between">
                                     <a class="small text-white stretched-link"
-                                        href="https://hackmd.io/@XYojb--aQQq12eTpXK-TPQ/S1cKbSh8t#/0/10"
+                                        href="https://hackmd.io/@XYojb--aQQq12eTpXK-TPQ/S1cKbSh8t#/4"
                                         target="_blank">View Details</a>
                                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                 </div>
